[gd_scene load_steps=8 format=3 uid="uid://cncncv5ktcu7i"]

[ext_resource type="Script" path="res://scenes/menus/GameOverScreen.gd" id="1_h42eq"]
[ext_resource type="Theme" uid="uid://dxgoy0vbgwgyv" path="res://textures/themes/main_theme.tres" id="2_hxq7r"]
[ext_resource type="Texture2D" uid="uid://0wxslqtmao3e" path="res://textures/menu/menu_button.png" id="3_eankm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_okqu4"]
bg_color = Color(0, 0, 0, 0.329412)

[sub_resource type="SystemFont" id="SystemFont_vd0sg"]
font_names = PackedStringArray("Impact")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1tki5"]
texture = ExtResource("3_eankm")
expand_margin_left = 32.0
expand_margin_top = 12.0
expand_margin_right = 32.0
expand_margin_bottom = 12.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5f2gf"]
texture = ExtResource("3_eankm")
expand_margin_left = 32.0
expand_margin_top = 12.0
expand_margin_right = 32.0
expand_margin_bottom = 12.0

[node name="GameOverScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h42eq")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.00586)
theme_override_styles/panel = SubResource("StyleBoxFlat_okqu4")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme = ExtResource("2_hxq7r")
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_vd0sg")
theme_override_font_sizes/font_size = 16
text = "Game Over
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueButton" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxTexture_1tki5")
theme_override_styles/hover = SubResource("StyleBoxTexture_1tki5")
theme_override_styles/pressed = SubResource("StyleBoxTexture_1tki5")
theme_override_styles/disabled = SubResource("StyleBoxTexture_1tki5")
text = "Continue"

[node name="QuitButton" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxTexture_5f2gf")
theme_override_styles/hover = SubResource("StyleBoxTexture_5f2gf")
theme_override_styles/pressed = SubResource("StyleBoxTexture_5f2gf")
theme_override_styles/focus = SubResource("StyleBoxTexture_5f2gf")
text = "Quit"

[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
